--- a/drivers/iio/dac/Kconfig
+++ b/drivers/iio/dac/Kconfig
@@ -264,6 +264,16 @@ config MCP4922
 	  To compile this driver as a module, choose M here: the module
 	  will be called mcp4922.
 
+config TLV5618A
+	tristate "TLV5618A DAC driver"
+	depends on SPI
+	help
+	  Say yes here to build the driver for the Texas Instruments
+	  TLV5618A DAC device.
+
+	  To compile this driver as a module, choose M here: the module
+	  will be called tlv5618a.
+
 config VF610_DAC
 	tristate "Vybrid vf610 DAC driver"
 	depends on OF
